--- a/src/js/login/login.html
+++ b/src/js/login/login.html
@@ -1,145 +1,163 @@
-<div style="float: center;">
-<div class="large-3 large-centered columns">
-  <div class="signup-box">
-    <div class="row">
-      <div class="large-12 columns">
-        <form ng-submit="login.registerUser(login.registerInfo)">
-        <!-- All inputs need a ng-model class!!! -->
-  <!--Sign Up -->
-          <div class="row">
-            <div class="large-12 columns">
-              <input type="text" name="firstName" placeholder="FistName" ng-model="login.registerInfo.firstName">
-            </div>
-          </div>
-
+<!-- <div style="float: center;">
+    <div class="large-3 large-centered columns">
+        <div class="signup-box">
             <div class="row">
-              <div class="large-12 columns">
-                <input type="text" name="lastName" placeholder="LastName" ng-model="login.registerInfo.lastName">
-              </div>
+                <div class="large-12 columns">
+                    <form ng-submit="login.registerUser(login.registerInfo)">
+  
+                        <div class="row">
+                            <div class="large-12 columns">
+                                <input type="text" name="firstName" placeholder="FistName" ng-model="login.registerInfo.firstName">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="large-12 columns">
+                                <input type="text" name="lastName" placeholder="LastName" ng-model="login.registerInfo.lastName">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="large-12 columns">
+                                <input type="text" name="address" placeholder="Address" ng-model="login.registerInfo.address">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="large-12 columns">
+                                <input type="text" name="zipcode" placeholder="Zipcode" ng-model="login.registerInfo.zipCode">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="large-12 columns">
+                                <input type="tel" name="telephone" placeholder="Phone" ng-model="login.registerInfo.telephone">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="large-12 columns">
+                                <input type="email" name="email" placeholder="Email" ng-model="login.registerInfo.email">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="large-12 columns">
+                                <input type="text" name="nsrRegistration" placeholder="NSR Registration" ng-model="login.registerInfo.nsrRegistration">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="large-12 columns">
+                                <input type="password" name="password" placeholder="Password" ng-model="login.registerInfo.password">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="large-12 columns">
+                                <input type="password" name="confirmPassword" placeholder="Confirm Password" ng-model="login.registerInfo.confirmPassword">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="large-centered columns">
+                                <button type="submit" class="button">Sign Up!
+                                    <button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
             </div>
-
-            <div class="row">
-              <div class="large-12 columns">
-                <input type="text" name="address" placeholder="Address" ng-model="login.registerInfo.address">
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="large-12 columns">
-                <input type="text" name="address" placeholder="Zipcode" ng-model="login.registerInfo.zipCode">
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="large-12 columns">
-                <input type="tel" name="telephone" placeholder="Phone" ng-model="login.registerInfo.telephone">
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="large-12 columns">
-                <input type="email" name="email" placeholder="Email" ng-model="login.registerInfo.email">
-              </div>
-            </div>
-
-            <div class="row">
-              <div class="large-12 columns">
-                <input type="text" name="nsrRegistration" placeholder="NSR Registration" ng-model="login.registerInfo.nsrRegistration">
-              </div>
-            </div>
-
-          <div class="row">
-            <div class="large-12 columns">
-              <input type="password" name="password" placeholder="Password" ng-model="login.registerInfo.password">
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="large-12 columns">
-              <input type="password" name="confirmPassword" placeholder="Confirm Password" ng-model="login.registerInfo.confirmPassword">
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="large-centered columns">
-              <button type="submit" class="button">Sign Up!<button>
-            </div>
-            
-          </div>
-
-        </form>
-      </div>
+        </div>
     </div>
-  </div>
-</div>
-</div>
+</div> -->
 <!-- Login -->
-<div style="float: center;">
-<div class="large-3 large-centered columns">
-  <div class="login-box">
-    <div class="row">
-      <div class="large-12 columns">
-        <form ng-submit="login.authUser(login.loginInfo)">
-        <!-- All inputs need a ng-model class!!! -->
-
+<!-- <div style="float: center;">
+    <div class="large-3 large-centered columns">
+        <div class="login-box">
             <div class="row">
-              <div class="large-12 columns">
-                <input type="email" name="email" placeholder="Email" ng-model="login.loginInfo.email">
-              </div>
-            </div>
-
-          <div class="row">
-            <div class="large-12 columns">
-              <input type="password" name="password" placeholder="Password" ng-model="login.loginInfo.password">
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="large-3 large-centered columns">
-              <button type="submit" class="button">Login<button>
-            </div>
-          </div>
-
-        </form>
-      </div>
-
-<!-- >>>>>>> ceedb4c62f17723dc2294219174d7b84ffa0df31
-
-<div id="loginField" class="column is-mobile">
-<div class="column is-half is-offset-one-quarter">
-<label class="label">Enter Your Email</label>
-<p class="control has-icon">
-    <input class="input is-medium" type="email" placeholder="Email" ng-model="login.loginInfo.email">
-    <i class="fa fa-envelope"></i>
-</p>
-<label class="label">Enter Your Password</label>
-<p class="control has-icon">
-    <input class="input is-medium" type="password" placeholder="Password" ng-model="login.loginInfo.password">
-    <i class="fa fa-lock"></i>
-</p>
-<p class="control">
-    <label class="checkbox">
-        <input type="checkbox"> Remember me
-    </label>
-</p>
-<p class="control">
-    <button class="button is-success" ng-click="login.fakeLogin()">Log In</button>
-</p>
-  <div class="label">
-    <label class="label">Select an Owner</label>
-  </div>
-  <div class="control">
-    <div class="select is-succes is-fullwidth">
-      <select ng-model="login.selectedOwner" ng-options="owner._id as owner.firstName for owner in login.owners">
-        <option value="" disabled>Owners</option>
-      </select>
+                <div class="large-12 columns">
+                    <form ng-submit="login.authUser(login.loginInfo)">
+                        <div class="row">
+                            <div class="large-12 columns">
+                                <input type="email" name="email" placeholder="Email" ng-model="login.loginInfo.email">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="large-12 columns">
+                                <input type="password" name="password" placeholder="Password" ng-model="login.loginInfo.password">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="large-3 large-centered columns">
+                                <button type="submit" class="button">Login
+                                    <button>
+                            </div>
+                        </div>
+                    </form>
+                </div> -->
+<!-- REGISTER -->
+<div ng-hide="!showing">
+    <div class="column is-mobile">
+        <div class="column is-2 is-offset-5">
+            <form ng-submit="login.registerUser(login.registerInfo)">
+                <label class="label">FirstName</label>
+                <p class="control">
+                    <input class="input is-primary" type="text" name="firstName" placeholder="FirstName" ng-model="login.registerInfo.firstName">
+                </p>
+                <label class="label">LastName</label>
+                <p class="control has-icon has-icon-right">
+                    <input class="input is-primary" type="text" name="lastName" placeholder="LastName" ng-model="login.registerInfo.lastName">
+                </p>
+                <label class="label">Address</label>
+                <p class="control has-icon has-icon-right">
+                    <input class="input is-primary" type="text" name="address" placeholder="Address" ng-model="login.registerInfo.address">
+                </p>
+                <label class="label">ZipCode</label>
+                <p class="control has-icon has-icon-right">
+                    <input class="input is-primary" type="text" name="zipcode" placeholder="Zipcode" ng-model="login.registerInfo.zipCode">
+                </p>
+                <label class="label">Phone</label>
+                <p class="control has-icon has-icon-right">
+                    <input class="input is-primary" type="tel" name="telephone" placeholder="Phone" ng-model="login.registerInfo.telephone">
+                </p>
+                <label class="label">Email</label>
+                <p class="control has-icon has-icon-right">
+                    <input class="input is-primary" type="email" name="email" placeholder="Email" ng-model="login.registerInfo.email">
+                </p>
+                <label class="label">NSR Registration</label>
+                <p class="control has-icon has-icon-right">
+                    <input class="input is-primary" type="text" name="nsrRegistration" placeholder="NSR Registration" ng-model="login.registerInfo.nsrRegistration">
+                </p>
+                <label class="label">Password</label>
+                <p class="control has-icon has-icon-right">
+                    <input class="input is-primary" type="password" name="password" placeholder="Password" ng-model="login.registerInfo.password">
+                    <i class="fa fa-password"></i>
+                </p>
+                <label class="label">Confirm Password</label>
+                <p class="control has-icon has-icon-right">
+                    <input class="input is-primary" type="password" name="confirmPassword" placeholder="Confirm Password" ng-model="login.registerInfo.confirmPassword">
+                    <i class="fa fa-password"></i>
+                </p>
+                <p class="control">
+                    <button class="button is-success" type="submit">Sign Up</button>
+                    <a ng-click="showing = !showing">Go back to Login</a>
+                </p>
+            </form>
+        </div>
     </div>
-<<<<<<< HEAD
- --> 
-=======
-  </div>
 </div>
+<!-- LOGIN -->
+<div ng-hide="showing">
+    <div id="loginField" class="column is-mobile">
+        <div class="column is-2 is-offset-5">
+            <form ng-submit="login.authUser(login.loginInfo)">
+                <label class="label">Enter Your Email</label>
+                <p class="control has-icon">
+                    <input class="input is-medium" type="email" placeholder="Email" ng-model="login.loginInfo.email">
+                    <i class="fa fa-envelope"></i>
+                </p>
+                <label class="label">Enter Your Password</label>
+                <p class="control has-icon">
+                    <input class="input is-medium" type="password" placeholder="Password" ng-model="login.loginInfo.password">
+                    <i class="fa fa-lock"></i>
+                </p>
+                <p class="control">
+                    <button class="button is-success" type="submit">Log In</button>
+                    <a ng-click="showing = !showing">Create an Account</a>
+                </p>
+            </form>
+        </div>
+    </div>
 </div>
-
->>>>>>> ceedb4c62f17723dc2294219174d7b84ffa0df31
- -->
