--- a/src/js/overview/overview.html
+++ b/src/js/overview/overview.html
@@ -1,4 +1,5 @@
-<div class=container>
+
+<div class="container">
     <!-- Here the user will see their todo list and some important information -->
     <div class=" bodyFont tile is-ancestor">
         <div class="tile is-parent">
@@ -42,7 +43,6 @@
                     <p>Email: {{overview.owner.email}}</p>
                     <p>Zip: {{overview.owner.zipCode}}</p>
                     <p>NSR Registration Number: {{overview.owner.nsrRegistration}}</p>
-                    <p>Next visit to the vet:</p>
                     <div ng-repeat='date in overview.vetAppt'>
                         <p>{{date | date}}</p>
                     </div>
