--- a/src/js/overview/overview.html
+++ b/src/js/overview/overview.html
@@ -1,22 +1,77 @@
-
-<div class="container">
-    <div class=" bodyFont tile is-ancestor">
-        <div class="tile is-parent">
-            <article class="tile is-child box">
-                <p class="title">Here are your pup needs list</p>
-                <p class="subtitle">Add a new task and the date its due</p>
-                <div class="content">
+<!-- Owners information on the top -->
+<div class="container profile fontGabriela">
+    <div class="section profile-heading">
+        <div class="columns">
+            <div class="column is-2">
+                <div class="image is-128x128 avatar">
+                    <img class="profilePic" ng-src="{{overview.pupData[0].picture.url}}">
+                </div>
+            </div>
+            <div class="column is-4 name">
+                <p>
+                    <span class="title is-bold profileTitle">Welcome {{overview.owner.firstName}}!</span>
+                </p>
+                <br>
+                <p class="tagline userInfo">Let's stay up to date-</p>
+                <p class="userInfo">Email: {{overview.owner.email}}</p>
+                <p class="userInfo">Zip: {{overview.owner.zipCode}}</p>
+                <p class="userInfo">NSR Registration Number: {{overview.owner.nsrRegistration}}</p>
+            </div>
+            <div class="column is-2">
+                <p>
+                    <span class="title is-bold vetVisit has-text-centered">Next Vet Visit(s)</span>
+                </p>
+                <br>
+                <div ng-repeat='date in overview.vetAppt'>
+                    <p>{{date | date}}</p>
+                </div>
+            </div>
+            <div class="column is-3">
+                <p>
+                    <span class="title is-bold vetVisit has-text-centered">Last Fitness Activity</span>
+                </p>
+                <br>
+                <p class="userInfo">Date: {{overview.fitnessData[0][0].date | date}}</p>
+                <p class="userInfo">How'd it Go: {{overview.fitnessData[0][0].notes}}</p>
+            </div>
+            <div class="addPupText">
+                <label for="addPup">Add a new pup here!</label>
+                <a class="addPup" ng-click="overview.addPup()"><i class="fa fa-paw large" aria-hidden="true"></i></a>
+            </div>
+        </div>
+    </div>
+    <!-- End of owners information -->
+    <!-- Todo and Pup Info -->
+    <div class="columns">
+        <div class="column is-6">
+            <section class="panel">
+                <p class="panel-heading">
+                    Here's your Todo List
+                </p>
+                <div class="panel-block">
                     <table class="table">
                         <thead>
                             <tr>
-                                <th>Task</th>
-                                <th>Date</th>
+                                <th>What I need to Get Done</th>
+                                <th>When</th>
+                                <th></th>
+                                <th></th>
                             </tr>
                         </thead>
+                        <tfoot>
+                            <tr>
+                                <th>Let's get it all done and keep our pups happy!</th>
+                                <th></th>
+                                <th></th>
+                                <th></th>
+                            </tr>
+                        </tfoot>
                         <tbody>
                             <tr ng-repeat="task in overview.owner.todo | orderBy: Date">
                                 <td>{{task.task}}</td>
                                 <td>{{task.date | date}}</td>
+                                <td></td>
+                                <td></td>
                             </tr>
                             <tr>
                                 <td>
@@ -28,31 +83,37 @@
                             </tr>
                             <tr>
                                 <td>
-                                    <button ng-click="overview.addTodo(overview.newTodo, overview.ownerId)">Add new task</button>
+                                    <button class="button success" ng-click="overview.addTodo(overview.newTodo, overview.ownerId)">Add new task</button>
                                 </td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
-            </article>
+            </section>
         </div>
-        <div class="tile is-parent is-3">
-            <article class="tile is-child box">
-                <p class="title">Hey {{overview.owner.firstName}}, over here!</p>
-                <p class="subtitle">My current information</p>
-                <div class="content">
-                    <p>Email: {{overview.owner.email}}</p>
-                    <p>Zip: {{overview.owner.zipCode}}</p>
-                    <p>NSR Registration Number: {{overview.owner.nsrRegistration}}</p>
-                    <div ng-repeat='date in overview.vetAppt'>
-                        <p>Next Visit to Vet: {{date | date}}</p>
+        <div class="column is-2" ng-repeat="pup in overview.owner.pups">
+            <div class="card">
+                <div class="card-image">
+                    <figure class="image is-1by1">
+                        <img ng-src="{{pup.picture.url}}" alt="">
+                    </figure>
+                </div>
+                <div class="card-content">
+                    <div class="content">
+                        <span class="title is-bold pupName">{{pup.name}}</span>
                     </div>
                 </div>
-            </article>
+                <footer class="card-footer">
+                    <a class="card-footer-item pupInfo" ui-sref="pupInfo({_id: pup._id})">{{pup.birthdate | date}}</a>
+                    <a class="card-footer-item pupInfo" ui-sref="pupInfo({_id: pup._id})">Pup's Info</a>
+                </footer>
+            </div>
+            <br>
         </div>
     </div>
-
-    <div>
+</div>
+<!-- End of todo / pupInfo -->
+<!--     <div>
         <button class="button success" ng-click="overview.addPup()"><strong>Add a Pup</strong></button>
     </div>
     <div class="pupData columns" ng-repeat="pup in overview.owner.pups">
@@ -87,11 +148,9 @@
             </div>
         </div>
     </div>
-</div>
-
-<!-- my code -->
-
-<table>
+</div> -->
+<!-- Cole's -->
+<!-- <table>
     <thead>
         <th>PUP Information</th>
     </thead>
@@ -118,16 +177,14 @@
             </td>
         </tr>
     </tbody>
-</table>
-
-<div class="container">
+</table> -->
+<!-- <div class="container">
     <div class=" bodyFont tile is-ancestor">
         <div class="tile is-parent">
             <article class="tile is-child box">
             <p class="title">Here are your pup needs list</p>
-            <p class="subtitle">Add a new task and the date its due</p>
-<!--Add a todo-->
-<div class="content">
+            <p class="subtitle">Add a new task and the date its due</p> -->
+<!-- <div class="content">
     <div class="table">
 
         <div class="large-4 columns">
@@ -140,8 +197,8 @@
         </div>
         <button class="button medium warning" ng-click="overview.addTodo(overview.newTodo, overview.ownerId)">Add new task</button>
     </div>
-</div>
-<table class="table">
+</div> -->
+<!-- <table class="table">
     <thead>
         <tr>
             <th>Enter New Task</th>
@@ -171,8 +228,9 @@
             </td>
         </tr>
     </tbody>
-</table>
-</div>
+</table> -->
+<!-- </div>
 </article>
 </div>
 </div>
+ -->
