--- a/src/js/overview/overview.html
+++ b/src/js/overview/overview.html
@@ -22,9 +22,9 @@
                     <span class="title is-bold vetVisit has-text-centered">Next Vet Visit(s)</span>
                 </p>
                 <br>
-                <div ng-repeat='date in overview.vetAppt'>
+                <!--  <div ng-repeat='date in overview.vetAppt'>
                     <p>{{date | date}}</p>
-                </div>
+                </div> -->
             </div>
             <div class="column is-3">
                 <p>
@@ -41,6 +41,7 @@
         </div>
     </div>
     <!-- End of owners information -->
+    
     <!-- Todo and Pup Info -->
     <div class="columns">
         <div class="column is-half-desktop is-full-mobile">
@@ -49,48 +50,59 @@
                     Here's your Todo List
                 </p>
                 <div class="panel-block">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>What I need to Get Done</th>
-                                <th>When</th>
-                                <th></th>
-                                <th></th>
-                            </tr>
-                        </thead>
-                        <tfoot>
-                            <tr>
-                                <th>Let's get it all done and keep our pups happy!</th>
-                                <th></th>
-                                <th></th>
-                                <th></th>
-                            </tr>
-                        </tfoot>
-                        <tbody>
-                            <tr ng-repeat="task in overview.owner.todo | orderBy: Date">
-                                <td>{{task.task}}</td>
-                                <td>{{task.date | date}}</td>
-                                <td></td>
-                                <td></td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <input class="input" type="text" ng-model="overview.newTodo.task">
-                                </td>
-                                <td>
-                                    <input class="input" type="date" ng-model="overview.newTodo.date">
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <button class="button success" ng-click="overview.addTodo(overview.newTodo, overview.ownerId)">Add new task</button>
-                                </td>
-                            </tr>
-                        </tbody>
+                    <table class="table table-hover table-condensed">
+                        <tr style="font-weight: bold">
+                            <td style="width:80%">What I need to Get Done</td>
+                            <td style="width:20%">When</td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                        <tr ng-repeat="task in overview.owner.todo | orderBy: Date">
+                            <td ng-model="overview.task.task">
+                                <!-- editable task (text with validation) -->
+                                <i editable-text="task.task" e-name="task" e-form="rowform" onaftersave="checkName($data, todo._id)">{{ task.task }}</i>
+                            </td>
+                            <td ng-model="overview.task.date">
+                                <!-- editable date (select-local) -->
+                                <i editable-text="task.date" e-name="date" e-form="rowform" onafteresave="checkName($data, todo._id)">
+          {{ task.date | date }}
+        </i>
+                            </td>
+                            <td style="white-space: nowrap">
+                                <!-- form -->
+                                <form editable-form name="rowform" ng-show="rowform.$visible" class="form-buttons form-inline">
+                                    <button type="submit" ng-click="overview.updateTodo(task, task._id)" ng-disabled="rowform.$waiting" class="button">
+                                        Update
+                                    </button>
+                                    <button type="button" ng-disabled="rowform.$waiting" ng-click="rowform.$cancel()" class="button">
+                                        Cancel
+                                    </button>
+                                </form>
+                                <div class="buttons" ng-show="!rowform.$visible">
+                                    <!-- Update is not working, yet -->
+                                    <!-- <button class="button" ng-click="rowform.$show()">Edit</button> -->
+                                    <button class="button" ng-click="overview.deleteTodo(task._id)">Completed</button>
+                                </div>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <input class="input" type="text" ng-model="overview.newTodo.task">
+                            </td>
+                            <td>
+                                <input class="input" type="date" ng-model="overview.newTodo.date">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <button class="button success" ng-click="overview.addTodo(overview.newTodo, overview.ownerId)">Add new task</button>
+                            </td>
+                        </tr>
                     </table>
                 </div>
             </section>
         </div>
+        <!-- Pup Card -->
         <div class="column is-2" ng-repeat="pup in overview.owner.pups">
             <div class="card">
                 <div class="card-image">
@@ -112,189 +124,3 @@
         </div>
     </div>
 </div>
-
-
-<!-- <div class="container profile fontGabriela">
-    <div class="section profile-heading">
-        <div class="columns">
-            <div class="column is-2">
-                <div class="image is-128x128 avatar">
-                    <img class="profilePic" ng-src="{{overview.pupData[0].picture.url}}">
-                </div>
-            </div>
-            <div class="column is-4 name">
-                <p>
-                    <span class="title is-bold profileTitle">Welcome {{overview.owner.firstName}}!</span>
-                </p>
-                <br>
-            <p class="tagline userInfo">Let's stay up to date-</p>
-                 <form editable-form name="editableForm" onaftersave="overview.saveUser()">
-
-                    <p>Zip Code: <i editable-text="overview.owner.email" e-name="email" onbeforesave="checkName($data)" e-required>{{ overview.owner.email || 'empty' }}</i>
-                    </p>
-                    <p>Zip Code:<i editable-text="overview.owner.zipCode" e-name="zipCode" onbeforesave="checkName($data)" e-required>{{ overview.owner.zipCode || 'empty' }}</i>
-                    </p>
-                    <p>NSR Registration Number:<i editable-text="overview.owner.nsrRegistration" e-name="nsrRegistration" onbeforesave="checkName($data)" e-required>{{ overview.owner.nsrRegistration || 'empty' }}</i>
-                    </p>
-
-                    <div class="buttons">
-                      <button type="button" class="button-small" ng-click="editableForm.$show()" ng-show="!editableForm.$visible">
-                        Make a change
-                      </button>
-                      <span ng-show="editableForm.$visible">
-                        <button type="submit" class="button-small" ng-disabled="editableForm.$waiting" ng-click="overview.updateOwner(overview.owner, overview.ownerId)">
-                          Update
-                        </button>
-                        <button type="button" class="button-small" ng-disabled="editableForm.$waiting" ng-click="editableForm.$cancel()">
-                          Cancel
-                        </button>
-                      </span>
-                    </div>
-              </form> 
-            </div>
-            <div class="column is-2">
-                <p>
-                    <span class="title is-bold vetVisit has-text-centered">Next Vet Visit(s)</span>
-                </p>
-                <br>
-                <div ng-repeat='date in overview.vetAppt'>
-                    <p>{{date | date}}</p>
-                </div>
-            </div>
-            <div class="column is-3">
-                <p>
-                    <span class="title is-bold vetVisit has-text-centered">Last Fitness Activity</span>
-                </p>
-                <br>
-                <p class="userInfo">Date: {{overview.fitnessData[0][0].date | date}}</p>
-                <p class="userInfo">How'd it Go: {{overview.fitnessData[0][0].notes}}</p>
-            </div>
-            <div class="addPupText">
-                <label for="addPup">Add a new pup here!</label>
-                <a class="addPup" ng-click="overview.addPup()"><i class="fa fa-paw large" aria-hidden="true"></i></a>
-            </div>
-        </div>
-    </div> -->
-
-<!-- End of todo / pupInfo -->
-<!--     <div>
-        <button class="button success" ng-click="overview.addPup()"><strong>Add a Pup</strong></button>
-    </div>
-    <div class="pupData columns" ng-repeat="pup in overview.owner.pups">
-        <div class="column">
-            <div class="card">
-                <div class="card-image">
-                    <figure class="image is-4by3">
-                        <img ng-src="{{pup.picture.url}}" alt="">
-                    </figure>
-                </div>
-                <div class="card-content">
-                    <div class="media">
-                        <div class="media-left">
-                            <figure class="image">
-                                <i class="fa fa-paw fa-3x" aria-hidden="true"></i>
-                            </figure>
-                        </div>
-                        <div class="media-content">
-                            <p class="title is-8 pupName">{{pup.name}}</p>
-                            <p class="subtitle is-5">{{pup.birthdate | date}}</p>
-                        </div>
-                    </div>
-                    <div class="content">
-                        <ul>
-                            <li>Chip Information: {{pup.chipInformation}}</li>
-                            <li>Allergies: {{pup.allergies}}</li>
-                        </ul>
-                        <br>
-                    </div>
-                </div>
-                <button class="button tiny" ui-sref="pupInfo({_id: pup._id})">PUP'S INFO</button>
-            </div>
-        </div>
-    </div>
-</div> -->
-<!-- Cole's -->
-<!-- <table>
-    <thead>
-        <th>PUP Information</th>
-    </thead>
-    <tbody>
-        <tr ng-repeat="pup in overview.owner.pups">
-            <td><img ng-src="{{pup.picture.url | fpConvert: {filter:'sharpen', w:300, h:150} }}"></td>
-            <td>Puppy's Name: {{pup.name}}</td>
-            <td>Puppy's Birthday: {{pup.birthdate | date}}</td>
-            <td>Puppy's Chip Information: {{pup.chipInformation}}</td>
-            <td ng-click="editing = true">Puppy's Name: {{pup.name}}</td>
-            <td ng-click="editing = true">Puppy's Birthday: {{pup.birthdate | date}}</td>
-            <td ng-click="editing = true">Puppy's Chip Information: {{pup.chipInformation}}</td>
-            <td ng-show="editing">
-                <button class="button alert tiny" ng-click="overview.deletePup(pup)">delete</button>
-                <button class="button tiny" ng-click="editing = false">close</button>
-            </td>
-            <td>
-                <button class="button tiny" ui-sref="pupInfo({_id: pup._id})">PUP'S INFO</button>
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <button class="button success" ng-click="overview.addPup()"><strong>Add a Pup</strong></button>
-            </td>
-        </tr>
-    </tbody>
-</table> -->
-<!-- <div class="container">
-    <div class=" bodyFont tile is-ancestor">
-        <div class="tile is-parent">
-            <article class="tile is-child box">
-            <p class="title">Here are your pup needs list</p>
-            <p class="subtitle">Add a new task and the date its due</p> -->
-<!-- <div class="content">
-    <div class="table">
-
-        <div class="large-4 columns">
-            <label class='label black'>Enter New Task</label>
-            <input type="text" ng-model="overview.newTodo.task">
-        </div>
-        <div class="large-4 columns">
-            <label class='label black'>When is it Due</label>
-            <input type="date" ng-model="overview.newTodo.date">
-        </div>
-        <button class="button medium warning" ng-click="overview.addTodo(overview.newTodo, overview.ownerId)">Add new task</button>
-    </div>
-</div> -->
-<!-- <table class="table">
-    <thead>
-        <tr>
-            <th>Enter New Task</th>
-            <th>When is it Due</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr ng-repeat="task in overview.owner.todo | orderBy: Date">
-            <td ng-hide="editing" ng-click="editing = true">{{task.task}} | {{task.date | date}}</td>
-            <td ng-show="editing">
-                <form ng-submit="editing = false">
-                    <div class="large-5 columns">
-                        <input style="border: none; box-shadow: none;" type="text" ng-model="task.task" ng-required/>
-                    </div>
-                    <div class="large-4 columns">
-                        <input style="border: none; box-shadow: none;" type="text" ng-model="task.date" ng-required/>
-                    </div>
-                    <td ng-show="editing">
-                        <button class="button warning tiny" type="submit" ng-click="overview.updateTodo(task, task._id)">Save</button>
-                        <button class="button tiny" ng-click="editing = false">close</button>
-                    </td>
-                </form>
-            </td>
-            <td>
-                <button class="button tiny" ng-hide="editing" ng-click="editing = true">Edit</button>
-                <button class="button tiny alert" ng-hide="editing" ng-click="overview.deleteTodo(task)">Done with Task</button>
-            </td>
-        </tr>
-    </tbody>
-</table> -->
-<!-- </div>
-</article>
-</div>
-</div>
- -->
