--- a/src/js/pupInfo/pupInfo.html
+++ b/src/js/pupInfo/pupInfo.html
@@ -119,7 +119,7 @@
       <td style="width:60%">How'd it go</td>
       <td style="width:20%">Edit</td>
     </tr>
-    <tr ng-repeat="fit in pupInfo.pup.fitness">
+    <tr ng-repeat="fit in pupInfo.pup.fitness | orderBy: Date">
       <td ng-model="pupInfo.fit.date">
         <!-- editable username (text with validation) -->
           <i editable-text="fit.date" e-name="date" e-form="rowform" onbeforesave="checkName($data)">{{ fit.date | date}}</i>
@@ -147,31 +147,3 @@
       </td>
     </tr>
   </table>
-<!-- 
-<table class="table">
-    <thead>
-        <tr>
-            <th>Date</th>
-            <th>How'd it Go</th>
-            <th></th>
-            <th></th>
-        </tr>
-    </thead>
-    <tfoot>
-        <tr>
-            <th>Date</th>
-            <th>How'd it Go</th>
-            <th></th>
-            <th></th>
-        </tr>
-    </tfoot>
-    <tbody>
-        <tr ng-repeat="fit in pupInfo.pup.fitness">
-            <td>{{fit.date | date}}</td>
-            <td>{{fit.notes}}</td>
-        </tr>
-    </tbody>
-</table>
-
-</div>
- -->
